# NBA_Predictions

./: README.md  package-lock.json  pyproject.toml  requirements.txt
data/processed/: player_features.parquet  player_features_2023_2026.parquet
data/raw/: player_gamelogs.parquet  player_gamelogs_2023_2026.parquet
models/: pts_mean.joblib  reb_mean.joblib
src/features/: build_features.py
src/ingest/: pull_player_gamelogs.py
src/model/: graphs.py  predict_props.py  prop_engine.py  train_means.py
src/nba_predictions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ui/: app.py
