[build-system] # PEP 517 build system specification
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# setup tools configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# project metadata
[project]
name = "nba-predictions" # name of the project
version = "0.1.0" # current version
description = "NBA player prop predictions using nba_api + ML"
readme = "README.md"
requires-python = ">=3.10" # minimum Python version
dependencies = [ # package dependencies
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "joblib",
  "tqdm",
  "nba_api",
  "pyarrow",
  "pyside6",
]

# scripts used to run   
[project.scripts]
nba-pull-gamelogs   = "src.ingest.pull_player_gamelogs:main"
nba-build-features  = "src.features.build_features:main"
nba-train           = "src.model.train_means:main"
nba-predict         = "src.model.predict_props:main"
nba-ui            = "src.ui.app:main"
